added basic structure

--- a/secpay-redesign/index.html
+++ b/secpay-redesign/index.html
@@ -8,6 +8,7 @@
 <body style="margin: 0;">
 	<top-bar></top-bar>
 	<side-bar></side-bar>
+	<main-content></main-content>
 	<script src="index.js"></script>
 </body>
 </html>
