--- a/uspresidents_a1.html
+++ b/uspresidents_a1.html
@@ -4,35 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>US Presidents</title>
+    <style>
+        img{
+            transition: all 1s ease;
+            border-radius: 5px;
+        }
+
+        img:hover{
+            box-shadow: 0px 0px 20px 10px rgba(0,0,0,0.7); 
+        }
+    </style>
 </head>
 <body>
     <table>
         <tr>
-            <td><img src="President1.jfif"></td>
-            <td><img src="President2.jfif"></td>
-            <td><img src="President3.jfif"></td>
-            <td><img src="President4.jfif"></td>
+            <td onclick="location.assign('https://github.com/Kishandharan/HTML/blob/main/President1.jfif')"><img src="President1.jfif"></td>
+            <td onclick="location.assign('https://github.com/Kishandharan/HTML/blob/main/President2.jfif')"><img src="President2.jfif"></td>
+            <td onclick="location.assign('https://github.com/Kishandharan/HTML/blob/main/President3.jfif')"><img src="President3.jfif"></td>
+            <td onclick="location.assign('https://github.com/Kishandharan/HTML/blob/main/President4.jfif')"><img src="President4.jfif"></td>
         </tr>
         <tr>
-            <td><img src="President5.jfif"></td>
-            <td><img src="President6.jfif"></td>
-            <td><img src="President7.jfif"></td>
-            <td><img src="President8.jfif"></td>
+            <td onclick="location.assign('https://github.com/Kishandharan/HTML/blob/main/President5.jfif')"><img src="President5.jfif"></td>
+            <td onclick="location.assign('https://github.com/Kishandharan/HTML/blob/main/President6.jfif')"><img src="President6.jfif"></td>
+            <td onclick="location.assign('https://github.com/Kishandharan/HTML/blob/main/President7.jfif')"><img src="President7.jfif"></td>
+            <td onclick="location.assign('https://github.com/Kishandharan/HTML/blob/main/President8.jfif')"><img src="President8.jfif"></td>
         </tr>
         <tr>
-            <td><img src="President9.jfif"></td>
-            <td><img src="President10.jfif"></td>
-            <td><img src="President11.jfif"></td>
-            <td><img src="President12.jfif"></td>
+            <td onclick="location.assign('https://github.com/Kishandharan/HTML/blob/main/President9.jfif')"><img src="President9.jfif"></td>
+            <td onclick="location.assign('https://github.com/Kishandharan/HTML/blob/main/President10.jfif')"><img src="President10.jfif"></td>
+            <td onclick="location.assign('https://github.com/Kishandharan/HTML/blob/main/President11.jfif')"><img src="President11.jfif"></td>
+            <td onclick="location.assign('https://github.com/Kishandharan/HTML/blob/main/President12.jfif')"><img src="President12.jfif"></td>
         </tr>
         <tr>
-            <td><img src="President13.jfif"></td>
-            <td><img src="President14.jfif"></td>
-            <td><img src="President15.jfif"></td>
-            <td><img src="President16.jfif"></td>
+            <td onclick="location.assign('https://github.com/Kishandharan/HTML/blob/main/President13.jfif')"><img src="President13.jfif"></td>
+            <td onclick="location.assign('https://github.com/Kishandharan/HTML/blob/main/President14.jfif')"><img src="President14.jfif"></td>
+            <td onclick="location.assign('https://github.com/Kishandharan/HTML/blob/main/President15.jfif')"><img src="President15.jfif"></td>
+            <td onclick="location.assign('https://github.com/Kishandharan/HTML/blob/main/President16.jfif')"><img src="President16.jfif"></td>
         </tr>
         <tr>
-            <td><img src="President17.jfif"></td>
+            <td onclick="location.assign('https://github.com/Kishandharan/HTML/blob/main/President17.jfif')"><img src="President17.jfif"></td>
             <td class="gap"></td>
             <td class="gap"></td>
             <td class="gap"></td>
