--- a/uspresidents_a1.html
+++ b/uspresidents_a1.html
@@ -19,16 +19,19 @@
             flex-direction: row;
         }
         #img{
+            width: 400px;
             margin: 5px;
-            border-radius: 5px;
+            border-radius: 20px;
         }
         #presidentNumber{
             margin: 2px;
         }
         #prevImg, #nextImg{
+            font-size: 2rem;
             border: none;
-            border-radius: 5px;
+            border-radius: 10px;
             cursor: pointer;
+            width: 100px;
             transition: all 1s ease;
         }
         #prevImg{
@@ -39,6 +42,7 @@
         }
         #indicator{
             margin: 0;
+            font-size: 4rem;
         }
     </style>
 </head>
