--- a/WebLite/weblite3.html
+++ b/WebLite/weblite3.html
@@ -8,11 +8,13 @@
 <body>
     <p></p>    
     <script>
-        let data;
+        async function getData1(){
+            let prom1 = await fetch('https://jsonplaceholder.typicode.com/todos/1');
+            let data1 = await prom1.json();
+            console.log(data1);
+        }
 
-        fetch('https://jsonplaceholder.typicode.com/todos/1')
-            .then( (response) => {response.json()} )
-            .then( (response) => {console.log(response)} );
+        getData1();
     </script>
 </body>
 </html>
