--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deployment Testing</title>
+    <title>TrueCare Nidhi Limited Web Site</title>
+    <link rel="stylesheet" href="styles/styling1.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto Mono">
 </head>
 <body>
-    <h1>Hello world!</h1>    
-    <p>This is my public website!</p>
+    <div class="nav-bar">
+        <div class="nav-bar-item">Home</div>        
+        <div class="nav-bar-item"><a href="management.html">Management</a></div>        
+        <div class="nav-bar-item"><a href="financials.html">Financials</a></div>        
+        <div class="nav-bar-item"><a href="certificates.html">Certificates</a></div>        
+        <div class="nav-bar-item"><a href="forms.html">Forms</a></div>        
+        <div class="nav-bar-item"><a href="nidhirules.html">Nidhi Rules</a></div>
+        <div class="nav-bar-item"><a href="gallery.html">Gallery</a></div>        
+        <div class="nav-bar-item"><a href="contact.html">Contact</a></div>
+    </div>    
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit debitis quibusdam sapiente excepturi ab necessitatibus perspiciatis possimus nisi molestiae officiis dicta voluptatem, voluptate dolore corporis repellendus quaerat exercitationem? Quaerat, Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi sapiente suscipit tempora magni esse eaque voluptate porro quia, nam eveniet voluptates laboriosam, nostrum quasi. Animi nesciunt ducimus assumenda quibusdam unde! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt earum, delectus sit aperiam sed nihil? Earum, iste ullam? Alias cum quasi et provident. Eius praesentium ad fugit nisi? Perspiciatis, ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, iste corrupti? Officia facere in, cumque odio accusantium exercitationem laborum eaque non rerum. Ducimus, autem id dolores nesciunt perferendis deserunt</p>    
 </body>
 </html>
