--- a/TC_index.html
+++ b/TC_index.html
@@ -12,26 +12,26 @@
     </head>
     <body>
         <div class="nav-bar">
-            <div class="nav-bar-item">Home</div>
+            <div class="nav-bar-item colorwhite">Home</div>
             <div class="nav-bar-item">
-                <a href="TC_management.html">Management</a>
+                <a class="textdecnon colorwhite" href="TC_management.html">Management</a>
             </div>
             <div class="nav-bar-item">
-                <a href="TC_financials.html">Financials</a>
+                <a class="textdecnon colorwhite"  href="TC_financials.html">Financials</a>
             </div>
             <div class="nav-bar-item">
-                <a href="TC_certificates.html">Certificates</a>
+                <a class="textdecnon colorwhite"  href="TC_certificates.html">Certificates</a>
             </div>
-            <div class="nav-bar-item"><a href="TC_forms.html">Forms</a></div>
+            <div class="nav-bar-item"><a class="textdecnon colorwhite" href="TC_forms.html">Forms</a></div>
             <div class="nav-bar-item">
-                <a href="TC_nidhirules.html">Nidhi Rules</a>
+                <a class="textdecnon colorwhite"  href="TC_nidhirules.html">Nidhi Rules</a>
             </div>
             <div class="nav-bar-item">
-                <a href="TC_gallery.html">Gallery</a>
+                <a class="textdecnon colorwhite"  href="TC_gallery.html">Gallery</a>
             </div>
-            <div class="nav-bar-item"><a href="TC_career.html">Career</a></div>
+            <div class="nav-bar-item"><a class="textdecnon colorwhite"  href="TC_career.html">Career</a></div>
             <div class="nav-bar-item">
-                <a href="TC_contact.html">Contact</a>
+                <a class="textdecnon colorwhite"  href="TC_contact.html">Contact</a>
             </div>
         </div>
         <div>
@@ -56,7 +56,7 @@
                 members with absolute financial security."
             </p>
         </div>
-        <a href="TrueCare_MD_Msg_English.pdf">Message from MD - English</a>
-        <a href="TrueCare_MD_Msg_Malayalam.pdf">Message from MD - Malayalam</a>
+        <a class="classblack" href="TrueCare_MD_Msg_English.pdf">Message from MD - English</a>
+        <a class="classblack" href="TrueCare_MD_Msg_Malayalam.pdf">Message from MD - Malayalam</a>
     </body>
 </html>
