--- a/TC_financials.html
+++ b/TC_financials.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <h1>Financials - 2022-23</h1>    
-    <a href="TrueCare_Financial_BS_2022-23.jpg">Balance Sheet</a>
-    <a href="TrueCare_Financial_PL_2022-23.jpg">Profit and Loss</a>
+    <a class="colorwhite" href="TrueCare_Financial_BS_2022-23.jpg">Balance Sheet</a>
+    <a class="colorwhite" href="TrueCare_Financial_PL_2022-23.jpg">Profit and Loss</a>
     <h1>Financials - 2023-24</h1>    
-    <a href="TrueCare_Financial_BS_2023-24.jpg">Balance Sheet</a>
-    <a href="TrueCare_Financial_PL_2023-24.jpg">Profit and Loss</a>
+    <a class="colorwhite" href="TrueCare_Financial_BS_2023-24.jpg">Balance Sheet</a>
+    <a class="colorwhite" href="TrueCare_Financial_PL_2023-24.jpg">Profit and Loss</a>
     <h1>Financials - 2024-25</h1>    
-    <a href="TrueCare_Financial_BS_2024-25.jpg">Balance Sheet</a>
-    <a href="TrueCare_Financial_PL_2024-25.jpg">Profit and Loss</a>
+    <a class="colorwhite" href="TrueCare_Financial_BS_2024-25.jpg">Balance Sheet</a>
+    <a class="colorwhite" href="TrueCare_Financial_PL_2024-25.jpg">Profit and Loss</a>
     
 </body>
 </html>
